--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "cheerio": "^1.0.0-rc.3",
+    "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
@@ -22,6 +24,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "request": "^2.88.0",
+    "style-loader": "^1.0.0",
     "webpack-dev-server": "^3.8.0"
   },
   "devDependencies": {
